k8s/api/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: marceloagmelo/java-api-token:1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
